--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Mokoolaid/liribot#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "moment": "^2.24.0"
-  }
+  },
+  "devDependencies": {}
 }
